# StockMarketMonitor

./: README.md
StockMarketMonitor/: CMakeLists.txt  MarketDataFeed.cpp  MarketDataFeed.h  Portfolio.cpp  Portfolio.h  RiskManager.cpp  RiskManager.h  Stock.cpp  Stock.h  main.cpp
